fixed the console table dependency

--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
   },
   "homepage": "https://github.com/jasmineteters/Employee-Tracker#readme",
   "dependencies": {
-    "console": "^0.7.2",
+    "console.table": "^0.10.0",
     "inquirer": "^7.3.3",
-    "mysql": "^2.18.1",
-    "table": "^6.0.4"
+    "mysql": "^2.18.1"
   }
 }
